# Factompiler

./: .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.MD  ARCHITECTURE.md  CLEANUP_FINDINGS.md  COMPILER_SPEC.md  CONTRIBUTING.md  ENTITY_REFERENCE_DSL.md  ERROR_HANDLING_GUIDE.md  LANGUAGE_SPEC.md  LICENSE  MANIFEST.in  README.md  WIRE_COLOR_FILTERING_REFACTORING_GUIDE.md  __init__.py  codecov.yml  compile.py  condition_folding.md  conftest.py  dsl_updated.md  full_debug.md  generate_entity_docs.py  issues.md  memory_overhaul_proposal.md  pyproject.toml  pytest.ini  refactoring.md  refactoring_plan.md  requirements.txt  small_debug.md  sr_latch_fundamentals.md  sr_latch_refactoring_plan.md  sr_latch_status.md  test_components.py  test_parser.py  test_parser_suite.py  test_semantic_suite.py
.github/workflows/: ci.yml
doc/: 01_introduction.md  02_quick_start.md  03_signals_and_types.md  04_memory.md  05_entities.md  06_functions.md  07_advanced_concepts.md  08_missing_features.md  ENTITY_REFERENCE.md  LIBRARY_REFERENCE.md  generate_entity_docs.py
dsl_compiler/: __init__.py  __main__.py  cli.py
dsl_compiler/grammar/: facto.lark  fcdsl.lark
dsl_compiler/integration_tests/: __init__.py  test_compiler.py  test_full_pipeline.py
dsl_compiler/integration_tests/fixtures/: basic_arithmetic.facto  bundle.facto  bundle_advanced.facto  complex_expression.facto  conditional.facto  coverage_boost.facto  entity.facto  entity_advanced.facto  entity_signal_coverage.facto  expression_coverage.facto  for_loop.facto  function.facto  latch_with_multiplier.facto  memory_arithmetic_feedback.facto  memory_conditional.facto  memory_edge_cases.facto  memory_multi_feedback.facto  mixed_types.facto  operators.facto  sr_latch.facto  statement_coverage.facto
dsl_compiler/src/: dsl_ast.py  emit.py  ir.py  lowerer.py  optimizer.py  parser.py  semantic.py  signal_limits.py
dsl_compiler/src/ast/: CLAUDE.MD  __init__.py  base.py  expressions.py  literals.py  statements.py  types.py
dsl_compiler/src/common/: CLAUDE.MD  __init__.py  constants.py  diagnostics.py  entity_data.py  signal_registry.py  signals.py  source_location.py  symbol_types.py
dsl_compiler/src/emission/: CLAUDE.MD  __init__.py  connection_builder.py  debug_format.py  emitter.py  entity_emitter.py  layout.py  memory.py  signal_resolver.py  signals.py  wiring.py
dsl_compiler/src/ir/: CLAUDE.MD  __init__.py  builder.py  nodes.py  optimizer.py
dsl_compiler/src/layout/: CLAUDE.MD  __init__.py  circuit_optimizer.py  cluster_analyzer.py  cluster_packer.py  cluster_split.py  connection_planner.py  entity_placer.py  force_directed_layout.py  force_directed_layout_debug_viz.py  integer_layout_solver.py  layout_engine.py  layout_plan.py  legacy_entity_emitter.py  legacy_signal_resolver.py  legacy_signals.py  memory.py  memory_builder.py  planner.py  power_planner.py  power_planner.py.backup  signal_analyzer.py  signal_graph.py  signal_resolver.py  tile_grid.py  wire_router.py
dsl_compiler/src/lowering/: CLAUDE.MD  __init__.py  constant_folder.py  expression_lowerer.py  lowerer.py  memory_lowerer.py  statement_lowerer.py
dsl_compiler/src/parsing/: CLAUDE.MD  __init__.py  parser.py  preprocessor.py  transformer.py
dsl_compiler/src/semantic/: CLAUDE.MD  __init__.py  analyzer.py  diagnostics.py  exceptions.py  signal_allocator.py  symbol_table.py  type_system.py  validators.py
dsl_compiler/tests/: 01_basic_arithmetic.fcdsl  02_mixed_types.fcdsl  06_functions.fcdsl  08_sampler.fcdsl  10_imports_modules.fcdsl
example_programs/: 00_color_pinning.facto  00_wire_merge.facto  01_comprehensive_operators.facto  02_mixed_types.facto  04_basic_memory.facto  04_basic_sr_latch.facto  04_binary_clock.facto  04_memory.facto  06_functions.facto  07_control_flow.facto  08_sampler.facto  09_advanced_patterns.facto  10_imports_modules.facto  11_edge_cases.facto  13_complex_expressions.facto  14_memory_entity_integration.facto  15_function_bundle_integration.facto  16_type_coercion_stress.facto  17_entity_coordination.facto  18_comprehensive_entities.facto  19_advanced_entity_properties_fixed.facto  20_comprehensive_signals.facto  21_memory_feedback_loop.facto  23_hsv_to_rgb.facto  24_basic_function.facto  32_condition_folding.facto
example_programs/tests/: test_end_to_end.py  test_markdown_examples.py  test_stage_interfaces.py
lib/: math.facto  memory_patterns.facto  memory_patterns.fcdsl  signal_processing.facto
tests/: blueprint_diff_helper.py  test_bundles.py  test_cli.py  test_common_infrastructure.py  test_compile.py  test_components.py  test_conditional_value_resolution.py  test_dsl_ast.py  test_emit.py  test_emit_system.py  test_end_to_end.py  test_force_directed_layout.py  test_helpers.py  test_ir.py  test_lowerer.py  test_parser.py  test_parser_suite.py  test_semantic.py  test_semantic_suite.py  test_simplified_emit.py  test_stage_interfaces.py  test_wire_merge.py  test_wiring.py
tests/sample_programs/: 00_condition_fold.facto  00_mst_fan_in.facto  00_mst_fan_in.fcdsl  00_mst_fan_out.fcdsl  00_wire_merge.fcdsl  00_wire_separation.facto  01_basic_arithmetic.fcdsl  01_comprehensive_operators.facto  01_comprehensive_operators.fcdsl  02_mixed_types.fcdsl  03_bundles.fcdsl  04_basic_basic_memory.fcdsl  04_basic_conditional.fcdsl  04_basic_memory.fcdsl  04_binary_clock.fcdsl  04_conditional_write_test.facto  04_conditional_write_test.fcdsl  04_memory.fcdsl  04_memory_advanced.facto  04_memory_advanced.fcdsl  04_memory_lib.fcdsl  04_small_binary_clock.facto  04_small_binary_clock.fcdsl  05_entities.facto  05_entities.fcdsl  06_functions.fcdsl  07_control_flow.fcdsl  08_sampler.facto  08_sampler.fcdsl  09_advanced_patterns.facto  09_advanced_patterns.fcdsl  10_imports_modules.fcdsl  11_edge_cases.fcdsl  12_comments_formatting.facto  12_comments_formatting.fcdsl  13_complex_expressions.fcdsl  14_memory_entity_integration.fcdsl  15_function_bundle_integration.fcdsl  16_type_coercion_stress.fcdsl  17_entity_coordination.fcdsl  (+24 more)
tests/sample_programs/stdlib/: memory_utils.facto  memory_utils.fcdsl  signal_processing.fcdsl
(+52 files in other folders)
