[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "factompile"
version = "0.1.0"
description = "Factompile - A compiler for the Facto programming language that generates Factorio circuit network blueprints"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Snagnar"}
]
keywords = [
    "factorio",
    "blueprint",
    "circuit",
    "combinator",
    "dsl",
    "compiler",
    "game",
    "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

dependencies = [
    "lark>=1.1.0",
    "factorio-draftsman>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Snagnar/Factompiler"
Documentation = "https://github.com/Snagnar/Factompiler/tree/main/doc"
Repository = "https://github.com/Snagnar/Factompiler"
Issues = "https://github.com/Snagnar/Factompiler/issues"
Changelog = "https://github.com/Snagnar/Factompiler/releases"

[project.scripts]
factompile = "dsl_compiler.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dsl_compiler*"]

[tool.setuptools.package-data]
"dsl_compiler" = ["grammar/*.lark", "lib/*.facto"]

[tool.ruff]
# Ruff replaces black, isort, flake8, and other tools
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "E203",   # Whitespace before ':' (conflicts with formatter)
    "N802",   # Function name should be lowercase (allow camelCase for Lark transformers)
    "N803",   # Argument name should be lowercase
    "N806",   # Variable in function should be lowercase
    "N999",   # Invalid module name (project root is "Factompiler")
    "SIM108", # Use ternary operator (sometimes less readable)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["N802", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["no-any-return"]
exclude = [
    "^temp/",
    "^output/",
    "^factorio-draftsman/",
    "tests",
]

# ortools doesn't have complete type stubs, disable attr-defined for files using it
[[tool.mypy.overrides]]
module = "dsl_compiler.src.layout.integer_layout_solver"
disable_error_code = ["attr-defined"]

[tool.coverage.run]
source = ["dsl_compiler"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
